--- a/02 - HTML/Pasteleria/css/style.css
+++ b/02 - HTML/Pasteleria/css/style.css
@@ -5,200 +5,133 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
     margin: 0%;
+    ;
     
 }
+
+/*----------Diseño del home-------------*/
+
+/* Estilo de header */
+header {   
+    margin: 0%;
+    font-size: 30px;
+    background-color: #009c7d;
+    color: white; 
+}
+
+header h1{
+  display: inline-flex;
+}
+header img{
+    border-radius: 50% 5% 50% 5%;
+    margin-top: 10px;
+    margin-left: 10px;
+}
+
+
 h1{
     margin: 0%;
     padding: 0%;
 }
 h3{
-   
+    margin-left: 15px;
+}
+
+.p{
     font-weight: bold;
-}
+    margin-left: 10px;
+    color: RGB(0, 173, 141);
 
-
-/* Estilo de header */
-header {  
+    display: inline-flex;
     padding: 10px;
-    margin: 0%;
-    text-align: left;
-    font-size: 30px;
-    background-color: #009c7d;
-    color: white;
-    
-}
-header h1{
-    display: inline-block;
-}
-header img{
-    border-radius: 50%;
-}
-
-/* Crear 2 columnas con la misma posición en la fila */
-p{
-    font-weight: bold; 
-}
-.dividendo{
-    color: #010a09;
-    font-weight: bold;
-  
-    padding: 10px;
-    opacity: 0.5;
 }
 
 nav{
     margin: 0%;
+
+
 }
 nav ul{
     margin: 0%;
-    padding: 10px;
-    background-color: #00ad8d;
-   
+    padding: 0%;
+    background-color: #00ad8d; 
+    align-content: space-between;
 }
 
 nav ul li{
-    display: inline-block;
-    width: 20%;
-    height: auto;
+    display:inline-flex;
     list-style: none;
-    text-align: center;
-   
+    padding: 5px;
+  
+
 }
 
 nav ul li a {
     text-decoration: none;
     font-size: 20px;
-    padding: 30px;
+    padding: 10px;
     font-weight: bold;
     color: white;
    
 }
+nav ul li a:hover{
+background-color: #009c7d;
+border-radius: 50px;
 
-article {
-    float: left;
-    padding: 20px;
-    width: 70%;
-  
-    height: 300px;
 }
 
-
-
-/* Estilo de footer */
-footer {
-    
-    padding: 26px;
-
-    border-top: 1px solid rgba(50, 50, 50, 0.3);
-    width: 100%; 
-    background-color: white;
-    display: flex;
-    align-items:flex-end;
-    justify-content: center;
-}
-
-/* Responsive layout */
-
-div {
-    margin: 20px;
-  
-}
 div ul{
     margin: 0%;
-    position: relative;
-    padding: 0%;
-   float: left;
-  
-    
+    padding: 0%;  
+   
+    align-items: center; 
 }
-div ul li{
-    display: inline-block;
-    
-    margin: 10px;
+
+div ul li{   
+    display: inline-flex;
     border-radius: 20px;
+    margin: 10px;
     text-align: center;
-  
-
+   
+    
 }
-div ul li a{
 
-  margin: 0%;
-  padding: 0%;
-  text-decoration: none;
-  font-size: 20px;
-  padding: 30px;
-  font-weight: bold;
-
-  color: rgba(143, 8, 8, 0.575);
-
-}
-div ul li a p{
-    padding: 0%;
-    margin: 0%;
-    text-align: center;
-}
 div ul li a img{
     border-radius: 20px;
-}
-
-@media (max-width: 564px) {
-
-    nav,
-    article {
-        width: 100%;
-        height: auto;
-    
-    }
-    nav ul li {
-    
-        width: 100%;
-        list-style: none;
-        text-align: left;
-     
-    }
     
 }
+
+div ul li a{
+
+    margin: 0%;
+    padding: 0%;
+    text-decoration: none;
+    font-size: 20px;
+    font-weight: bold;
+  
+    color: rgba(143, 8, 8, 0.575);
+  
+  }
+
+
+div ul li a p {
+    padding: 0%;
+    margin: 0%;
+
+}
+
+
+.cajaCentral{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+
 
 /* PAGE about */
-.about{
-    width: 70%;
-    height: auto;
-    margin: 0% auto;
-    
-    padding: 30px;
-    border-radius: 20px;
-   
-}
-.about p, .about h3{
-margin: 0%;
 
-}
-.divdiv{
-    width: 15%;
-    height: 200px;
-    margin: 0% auto;
-    padding: 0%;
-    float: left;
-    
-
-}
-.divdiv2{
-    width: 15%;
-    height: 200px;
-    margin: 0% auto;
-    padding: 0%;
-    float: right;
-  
-
-}
-.atiabout{
-    width: 100%;
-    height: auto;
-  
- float: left;
-    margin: 0% auto;
-    padding: 0%;
-}
 
 .default{
    
@@ -217,12 +150,10 @@ font-family: arial, sans-serif;
 font-weight: bold;
 
 }
-.contenedor{
-    display: flex;
 
-    justify-content: center;
-    flex-wrap: wrap;
-}
+
+
+
 .fondoCompleto{
     background-image: url("/assets/logo.png");
     background-repeat: no-repeat;
@@ -258,4 +189,15 @@ form input, select{
     margin: 10px;
     border-radius: 20px;
     width: 200px;
+}
+
+/* Estilo de footer */
+footer {
+    padding: 20px;
+    border-top: 1px solid rgba(50, 50, 50, 0.3);
+    width: 100%; 
+    background-color: white;
+    display: flex;
+    align-items:flex-end;
+    justify-content: center;
 }
